v1.x.x.x - unreleased
 CHANGED: Add support of interlaced flags in software mode for MPCVideoDecoder filter
 CHANGED: D3DFullScreen mode now takes into account the monitor to full-screen mode in options, if monitor is not specified on the command line.
 CHANGED: Auto-hide playlist on fullscreen(feature request #2219561) 
 CHANGED: Detours library updated to v2.1
 FIXED  : Support for Theora stream in Ogg internal splitter

v1.2.908.0 - 30.Nobember 2008
======================
 NEW	: support Multi-Monitor configuration, select Monitor for full-screen playback
 NEW	: creation of minidump when mpc crash
 NEW    : Simplified Chinese & Traditional Chinese translations
 NEW    : Pixel shader to convert BT601 -> BT701 (request #1911511)
 NEW    : YV12 Chroma Upsampling pixel shader added (http://forum.doom9.org/showthread.php?p=1184975#post1184975)
 NEW    : Recursively adding directories to the Playlist (feature request #2013805), add as New Menu item
 NEW    : Support for M2TS presentation graphics streams (only for EVR Custom and VMR9 Renderless)
 NEW    : Command lines "/startpos hh:mm:ss.ff", "/dvdpos title#chapter" and "/dvdpos title#hh:mm:ss.ff" to start playback to position
 NEW    : Differents icons for each format associated with mpc
 NEW    : Differents icons for each format associated with mpc
 NEW    : support H264 and AAC in FLV splitter
 CHANGED: Add VIRTKEY for "Save Thumbnails" (request #1964399)
 CHANGED: Store the settings for the internal DXVA/FFmpeg decoders in a different value than the other internal decoders. This makes the settings better interchangeable with old MPC builds. Also gives more room in the bitvector for adding more (FFmpeg based) decoders in the future.
 CHANGED: PAR correction option (for anamorphic video)in VSFilter and RealText support 
 CHANGED: liba52 & libdts library updated
 CHANGED: x64 edition of MPCVideodec is now build using GCC/MingW64 (improve performances)